# ecommerce-nlp-customer-segmentation

./: .gitignore  README.md  pyproject.toml
Streamlit/: Home.py
Streamlit/Pages/: 1_Sentiment_vs_Ratings.py  2_Emotion_Analysis.py  3_Customer_Segmentation.py
notebooks/: 00_data_cleaning_shared.ipynb  02_emotion_categories_logistics.ipynb  03_customer_clustering_rfm.ipynb  04_final_storytelling.ipynb
outputs/: 01_sentiment_vs_ratings.ipynb  pyproject.toml  sentiment_predictions.csv
src/: data_utils.py
